--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/css/style.css" />
+
 <h1>个人简历</h1>
+<img src="/img/tuture-logo.png" alt="Logo" />
 <p>我是一只小小的图雀，渴望学习技术，磨炼实战本领。</p>
 <a href="/contact">联系方式</a>
